# lifx

./: .gitignore  Dockerfile  README.md  api.py  model.py  mypy.ini  pyproject.toml
docs/: conf.py  lifx.html  modules.html  search.html
docs/_build/doctrees/: environment.pickle  index.doctree  lifx.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  lifx.html  modules.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/lifx/: color.html  exception.html  get_selectors.html  model.html  scenes.html  selector.html  session.html
docs/_modules/: index.html
docs/_modules/lifx/: color.html  exception.html  model.html  scenes.html  session.html
docs/_sources/: index.rst.txt  lifx.rst.txt
lifx/: __init__.py  api.py  color.py  exception.py  get_selectors.py  light.py  model.py  scenes.py  selector.py  session.py
scripts/: format-code.sh  get-docker-shell.sh  run-tests.sh
sphinx/: Find Results  Makefile  conf.py
sphinx/_build/doctrees/: environment.pickle  index.doctree  lifx.doctree  modules.doctree
sphinx/_build/html/: .buildinfo  genindex.html  index.html  lifx.html  objects.inv  py-modindex.html  searchindex.js
sphinx/_build/html/_modules/lifx/: exception.html  get_selectors.html  scenes.html  selector.html
tests/: test_api.py
tests/testdata/: list_all_1.json  list_all_2.json  scenes.json
