[tool.poetry]
name = "lifx"
version = "0.1.0"
description = "API For Controlling Lifx Lights"
authors = ["Harry Cooper <harry.coop99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
mypy = "^0.770"
pydantic = "^1.5.1"
pytest = "^5.4"
responses = "^0.10.14"
yapf = "^0.30.0"
sphinx = "^3.0"
sphinx_autodoc_typehints = "^1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
